mkdocs-on-kubernets-nginx/kubernetes/dev/service.gt.yml
apiVersion: v1
kind: Service
metadata:
  name: dax-docs
spec:
  selector:
    app: dax-docs
  ports:
  - port: 8080
    targetPort: 8080
