mkdocs-on-kubernets-nginx/kubernetes/dev/ingress.gt.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dax-docs
  labels:
    name: dax-docs
spec:
  rules:
  - host: dax-docs
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dax-docs
            port: 
              number: 8080
